--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,10 @@
 [workspace]
 members = ["suidsnoop", "suidsnoop-common", "xtask"]
+
+# TODO delete this when my patch is merged upstream
+[patch.crates-io]
+aya = {git = "https://github.com/willfindlay/aya", branch = "arguments"}
+
+# TODO delete this when my patch is merged upstream
+[patch."http://github.com/aya-rs/aya"]
+aya = {git = "https://github.com/willfindlay/aya", branch = "arguments"}
