--- a/suidsnoop/Cargo.toml
+++ b/suidsnoop/Cargo.toml
@@ -5,12 +5,17 @@ edition = "2018"
 publish = false
 
 [dependencies]
-aya = { git = "https://github.com/aya-rs/aya", branch="main" }
+aya = { git = "https://github.com/aya-rs/aya", branch="main", features=["async_tokio"] }
 suidsnoop-common = { path = "../suidsnoop-common", features=["userspace"] }
 anyhow = "1.0.42"
 ctrlc = "3.2"
 
 structopt = { version = "0.3"}
+tokio = { version = "1.7.1", features = ["full"] }
+bytes = "1.0.1"
+chrono = "0.4.19"
+passwd = "0.0.1"
+groups = "0.1.1"
 
 [[bin]]
 name = "suidsnoop"
